{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 15,
  "lineage": "4940c3f0-8937-7b74-7dba-30305f758877",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "demo-prv-vm1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/networkInterfaces/demo-prv-vm1-nic",
            "internal_domain_name_suffix": "wbivr0xdb2aefecb2pxx444ewa.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.10.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/demo-subnet-private"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "name": "demo-prv-vm1-nic",
            "private_ip_address": "10.10.2.4",
            "private_ip_addresses": [
              "10.10.2.4"
            ],
            "resource_group_name": "rg-cj-test"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "demo-pub-vm1",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/networkInterfaces/demo-pub-vm1-nic",
            "internal_domain_name_suffix": "wbivr0xdb2aefecb2pxx444ewa.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/publicIPAddresses/demo-pub-vm1-pip",
                "subnet_id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/demo-subnet-public"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "swedencentral",
            "name": "demo-pub-vm1-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "rg-cj-test"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.pubip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.public",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/networkSecurityGroups/demo-nsg-private",
            "location": "swedencentral",
            "name": "demo-nsg-private",
            "resource_group_name": "rg-cj-test",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-From-VNet",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/networkSecurityGroups/demo-nsg-public",
            "location": "swedencentral",
            "name": "demo-nsg-public",
            "resource_group_name": "rg-cj-test",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pubip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "demo-pub-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/publicIPAddresses/demo-pub-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.240.235.213",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "demo-pub-vm1-pip",
            "resource_group_name": "rg-cj-test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/demo-subnet-private",
            "name": "demo-subnet-private",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-cj-test",
            "virtual_network_name": "demo-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/demo-subnet-public",
            "name": "demo-subnet-public",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-cj-test",
            "virtual_network_name": "demo-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/demo-subnet-private",
            "network_security_group_id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/networkSecurityGroups/demo-nsg-private",
            "subnet_id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/demo-subnet-private"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_private",
            "azurerm_resource_group.rg",
            "azurerm_subnet.private",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/demo-subnet-public",
            "network_security_group_id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/networkSecurityGroups/demo-nsg-public",
            "subnet_id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/virtualNetworks/demo-vnet/subnets/demo-subnet-public"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_public",
            "azurerm_resource_group.rg",
            "azurerm_subnet.public",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ea5851b0-0fe3-4200-9041-e3ef7f7bc4b0",
            "id": "/subscriptions/f50561d7-1fc2-45d3-bbd8-a4a7925b1976/resourceGroups/rg-cj-test/providers/Microsoft.Network/virtualNetworks/demo-vnet",
            "location": "swedencentral",
            "name": "demo-vnet",
            "resource_group_name": "rg-cj-test"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}